# kt_gpstime

./: CMakeLists.txt  README.md  kt_gpstime.c  kt_gpstime.cpp
include/: ktl_gpstime.h
src/: gpstime.cpp  ktl_gpstime.cpp
util/: get  get.c  getleap.sh  timediff.py
